add Conrad and sanitize all keys for readability